# terraform-aws-sns-to-sentry

./: Makefile  README.md  iam.tf  lambda.tf  outputs.tf  pyproject.toml  sns.tf  variables.tf
sns_to_sentry/: lambda_handler.py  models.py
src/: lambda_handler.py
