[tool.poetry]
name = "sns-to-sentry"
version = "0.0.2"
description = "Terraform module to "
authors = [
    "Dmitry Zelinsky <dmitry@criterion.net>",
    "Anatoly Scherbakov <altaisoft@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
sentry-sdk = "^1.0.0"
Jinja2 = "^3.0.1"


[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
flakehell = "^0.9.0"
pip = "^21.0.1"
mypy = "^0.812"
flake8 = "^3.9.0,<3.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.flakehell]
base = "https://raw.githubusercontent.com/Recall-Masters/standards/main/pyproject.toml"
